--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "node-fetch": "^3.3.2",
     "openai": "^6.10.0",
     "pdf-lib": "^1.17.1",
-    "pdf-parse": "^2.4.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
-    "tesseract.js": "^7.0.0"
+    "tesseract.js": "^7.0.0",
+    "unpdf": "^1.4.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
