--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.2",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/pg": "^8.16.0",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "fast-xml-parser": "^5.3.3",
     "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.4",
@@ -28,6 +30,8 @@
     "node-fetch": "^3.3.2",
     "openai": "^6.10.0",
     "pdf-lib": "^1.17.1",
+    "pg": "^8.16.3",
+    "puppeteer": "^24.34.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
@@ -37,6 +41,7 @@
   "devDependencies": {
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
+    "@types/express": "^5.0.6",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
