--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.556.0",
     "mammoth": "^1.11.0",
-    "next": "16.0.7",
+    "next": "^16.1.1",
     "node-fetch": "^3.3.2",
     "openai": "^6.10.0",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.530",
     "pg": "^8.16.3",
     "puppeteer": "^24.34.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "tesseract.js": "^7.0.0",
     "unpdf": "^1.4.0"
